@@ -1,3 +1,6 @@
+2016-05-15  Daniel Hawkins
+	* server/monster.c: Remove redundant hp value check in monster_do_living().
+
 2016-05-14  Daniel Hawkins
 	* server/monster.c: Optimizations in monster_compute_path().
 	* common/object.c: Reimplement the absdir() function to avoid loops.
